[package]
name = "rsbar-img"
description = "Scan and decode bar codes from one or more image files."
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "scripts/build.rs"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
libc = { version = "0.2.139" }
image = { version = "0.24.5" }

[features]
default = [
    "ean",
    "databar",
    "code128",
    "code93",
    "code39",
    "codabar",
    "i25",
    "qrcode",
    "sqcode",
]
dbus = []
# Symbol features
ean = []
databar = []
code128 = []
code93 = []
code39 = []
codabar = []
i25 = []
qrcode = []
sqcode = []
pdf417 = []
