[package]
name = "rsbar-img"
description = "Scan and decode bar codes from one or more image files."
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "scripts/build.rs"

[dependencies]
anyhow = { version = "1.0.69" }
clap = { version = "4.1.4", features = ["derive"] }
clap-verbosity-flag = { version = "2.0.0" }
env_logger = { version = "0.10.0" }
image = { version = "0.24.5" }
libc = { version = "0.2.139" }
log = { version = "0.4.17" }

[dev-dependencies]
assert_cmd = { version = "2.0.8" }
assert_fs = { version = "1.0.10" }
criterion = { version = "0.4.0" }
predicates = { version = "2.1.5" }

[features]
default = [
    "ean",
    "databar",
    "code128",
    "code93",
    "code39",
    "codabar",
    "i25",
    "qrcode",
    "sqcode",
]
dbus = []
# Symbol features
ean = []
databar = []
code128 = []
code93 = []
code39 = []
codabar = []
i25 = []
qrcode = []
sqcode = []
pdf417 = []

[[bench]]
name = "cli"
harness = false
